# Snake

./: Board.h  CMakeLists.txt  Food.h  Game.h  README.md  Snake.h  Snake_1  Snake_game  Vector2D.h  graphics.hpp  main.cpp  playersScores.txt  playersSettings.txt  settings.h  settings.hpp  settings.txt
Board/: Board.cpp  Board.h
Maps/: 10x23.txt  12x31.txt  21x40.txt
Snake/: Snake.h
Util/: Point.hpp  Random.h  Vector2D.hpp
include/: BaseMenu.hpp  Board.hpp  Food.hpp  Game.hpp  GraphicsSettings.hpp  MainMenu.hpp  Menu.hpp  Player.hpp  PlayerSettingsMenu.hpp  PlayersSelectionMenu.hpp  PlayersSettings.hpp  PlayersSettingsChoiceMenu.hpp  Scores.hpp  SettingsMenu.hpp  Snake.hpp  StartMenu.hpp
src/: BaseMenu.cpp  Board.cpp  Game.cpp  GraphicsSettings.cpp  MainMenu.cpp  Menu.cpp  PlayerSettingsMenu.cpp  PlayersSelectionMenu.cpp  PlayersSettings.cpp  PlayersSettingsChoiceMenu.cpp  Scores.cpp  SettingsMenu.cpp  Snake.cpp  StartMenu.cpp  main.cpp
